tests/baselines/reference/generatorOverloads3.errors.txt
generatorOverloads3.ts(2,5): error TS1222: An overload signature cannot be declared as a generator.
generatorOverloads3.ts(3,5): error TS1222: An overload signature cannot be declared as a generator.


==== generatorOverloads3.ts (2 errors) ====
    class C {
        *f(s: string): Iterable<any>;
        ~
!!! error TS1222: An overload signature cannot be declared as a generator.
        *f(s: number): Iterable<any>;
        ~
!!! error TS1222: An overload signature cannot be declared as a generator.
        *f(s: any): Iterable<any> { }
    }